# Boids

./: CMakeLists.txt  README.md  boid.cpp  boid_simulation  main.cpp  point.cpp  sfml.cpp
include/: boid.hpp  constants.hpp  flock.hpp  graphics.hpp  point.hpp  sfml.hpp  statistics.hpp
src/: boid.cpp  boid.hpp  flock.cpp  graphics.cpp  main.cpp  point.cpp  point.hpp  sfml.cpp  sfml.hpp  statistics.cpp  test.cpp
